kustomization/components/networkpolicy-allow-within-this-namespace/networkpolicy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-within-this-namespace-networkpolicy
spec:
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: PLACEHOLDER
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: PLACEHOLDER
  podSelector:
    matchLabels:
  policyTypes:
    - Egress
    - Ingress
